Updated EquipChoicePanel.java